--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/menu_home"
         android:icon="@drawable/home"
-        android:title="@string/menu_home" />
+        android:title="@string/news" />
     <item
         android:id="@+id/menu_statistic"
         android:icon="@drawable/statistic"
-        android:title="@string/menu_statistic" />
+        android:title="@string/statistic" />
     <item
         android:id="@+id/menu_entry"
         android:icon="@drawable/entry"
-        android:title="@string/menu_entry" />
+        android:title="@string/entry" />
     <item
         android:id="@+id/menu_scholar"
         android:icon="@drawable/scholar"
-        android:title="@string/menu_scholar" />
+        android:title="@string/scholar" />
     <item
         android:id="@+id/menu_user"
         android:icon="@drawable/user"
-        android:title="@string/menu_user" />
+        android:title="@string/user" />
 </menu>
