--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
 
     <style name="TabLayoutTheme" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorHeight">0dp</item>
-        <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
+        <item name="theme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
 </resources>
