--- a/app/src/main/res/layout/newscontenttest.xml
+++ b/app/src/main/res/layout/newscontenttest.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/testNews"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
     android:text="@string/news">
 </TextView>
