空白的数据页面

--- a/app/src/main/res/drawable/progressbar_refresh.xml
+++ b/app/src/main/res/drawable/progressbar_refresh.xml
@@ -10,8 +10,8 @@
         android:thickness="3dp"
         android:useLevel="false">
         <gradient
-            android:centerColor="#4DB6AC"
-            android:endColor="#4DB6AC"
+            android:centerColor="@color/colorPrimary"
+            android:endColor="@color/colorPrimary"
             android:startColor="#FFF"
             android:type="sweep" />
     </shape>
