--- a/app/src/main/res/layout/contenttest.xml
+++ b/app/src/main/res/layout/contenttest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/testNews"
+    android:id="@+id/contentTest"
+    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:text="@string/news">
+    android:text="@string/contentTest">
 </TextView>
