--- a/app/src/main/res/layout/contenttest.xml
+++ b/app/src/main/res/layout/contenttest.xml
@@ -4,5 +4,7 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
     android:text="@string/contentTest">
 </TextView>
