--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/newsItem"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp">
 
     <TextView
-        android:id="@+id/newsTitle"
+        android:id="@+id/news_SP_title"
         android:text="@string/newsTitle"
         android:textSize="18sp"
         android:textColor="#000000"
@@ -33,6 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_marginBottom="2dp"
-        android:background="#D7C9EA" />
+        android:background="#EAEAEA" />
 
 </LinearLayout>
