--- a/app/src/main/res/layout/news_single_page.xml
+++ b/app/src/main/res/layout/news_single_page.xml
@@ -44,7 +44,8 @@
                 android:lineSpacingExtra="5dp"
                 android:textColor="@android:color/black"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
