新闻搜索可以用叻,好耶

--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="5dp"/>
     <TextView
         android:id="@+id/newsSource"
-        android:hint="@string/newsSource"
+        android:text="@string/newsSource"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
