--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -29,7 +29,7 @@
         android:text="@string/newsSource"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
+    <!-- 分割线 -->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
