--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -53,6 +53,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_history"
                 android:layout_width="25dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/history" />
@@ -80,12 +81,13 @@
             app:layout_constraintTop_toBottomOf="@+id/ll_history">
 
             <ImageView
-                android:layout_width="22dp"
+                android:id="@+id/img_cache"
+                android:layout_width="23dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/cache" />
 
             <Button
-                android:id="@+id/user_like"
+                android:id="@+id/user_cache"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -108,6 +110,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_quit"
                 android:layout_width="25dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/quit"/>
