--- a/app/src/main/res/layout/fragment_scholar.xml
+++ b/app/src/main/res/layout/fragment_scholar.xml
@@ -21,6 +21,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:gravity="center"
                 android:text="@string/scholar"
                 android:textColor="@color/corona_background"
