--- a/app/src/main/res/layout/scholar_content.xml
+++ b/app/src/main/res/layout/scholar_content.xml
@@ -8,9 +8,11 @@
 
     <LinearLayout
         android:id="@+id/scholar_item"
+        android:background="@drawable/background_text"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
@@ -18,14 +20,15 @@
             android:id="@+id/scholar_avatar"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:layout_weight="3"
             android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginEnd="20dp"
             android:layout_weight="10"
             android:orientation="vertical">
 
@@ -81,10 +84,4 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_height="1dp"
-        android:background="#EAEAEA" />
 </LinearLayout>
