--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -6,34 +6,33 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginTop="20dp">
 
     <TextView
         android:id="@+id/news_SP_title"
         android:text="@string/newsTitle"
         android:textSize="18sp"
-        android:textColor="#000000"
+        android:textColor="#2C2C2C"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="15dp"/>
     <TextView
         android:id="@+id/newsBody"
         android:text="@string/newsBody"
         android:textColor="#4A4A4A"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="10dp"/>
     <TextView
         android:id="@+id/newsSource"
         android:text="@string/newsSource"
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <!-- 分割线 -->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:layout_marginBottom="2dp"
         android:background="#EAEAEA" />
 
 </LinearLayout>
