--- a/app/src/main/res/layout/fragment_entity.xml
+++ b/app/src/main/res/layout/fragment_entity.xml
@@ -33,7 +33,16 @@
                     android:textSize="23sp"
                     android:textColor="@color/corona_background"
                     android:text="@string/entity"/>
-                <TextView
+
+                <SearchView
+                    android:id="@+id/entity_search_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:iconifiedByDefault="false"
+                    android:background="@drawable/edit_background"
+                    android:queryHint="@string/search" />
+
+                <!---TextView
                     android:id="@+id/entity_search_bar"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -44,18 +53,17 @@
                     android:singleLine="true"
                     android:gravity="center"
                     android:background="@drawable/edit_background"
-                    android:hint="@string/search"/>
+                    android:hint="@string/search"/-->
 
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/entity">
-    </TextView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/entity_container" />
 
 
 </LinearLayout>
