--- a/app/src/main/res/layout/layout_entity_item_details.xml
+++ b/app/src/main/res/layout/layout_entity_item_details.xml
@@ -21,7 +21,7 @@
             android:layout_weight="1"
             android:id="@+id/entity_item_description"/>
 
-        <com.example.coronanews.EntityImageView
+        <com.java.ChenYuanYong.EntityImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/entity_img"
